--- a/aws.ini
+++ b/aws.ini
@@ -1,3 +1,3 @@
 [g1]
-n1 ansible_host=10.0.1.11 ansible_user=centos ansible_ssh_private_key_file=/home/centos/deployer-key ansible_ssh_common_args='-o StrictHostKeyChecking=no'
+n1 ansible_host=10.0.1.11 ansible_user=ec2-user ansible_ssh_private_key_file=/home/linux/deployer-key ansible_ssh_common_args='-o StrictHostKeyChecking=no'
 
